--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "start": "node app.js",
     "dev": "nodemon app.js",
+    "build": "cd client && npm install && npm run build",
     "test": "jest"
   },
   "keywords": [],
@@ -18,6 +19,7 @@
     "compression": "^1.8.0",
     "connect-mongo": "^5.1.0",
     "cookie-parser": "^1.4.7",
+    "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.2.1",
     "express-handlebars": "^8.0.1",
